--- a/about.html
+++ b/about.html
@@ -376,25 +376,25 @@
 
 					<ul>
 						<li class="p-b-10">
-							<a href="#" class="stext-107 cl7 hov-cl1 trans-04">
+							<a href="product.html" class="stext-107 cl7 hov-cl1 trans-04">
 								Dama
 							</a>
 						</li>
 
 						<li class="p-b-10">
-							<a href="#" class="stext-107 cl7 hov-cl1 trans-04">
+							<a href="product.html" class="stext-107 cl7 hov-cl1 trans-04">
 								Caballero
 							</a>
 						</li>
 
 						<li class="p-b-10">
-							<a href="#" class="stext-107 cl7 hov-cl1 trans-04">
+							<a href="product.html" class="stext-107 cl7 hov-cl1 trans-04">
 								Calzado
 							</a>
 						</li>
 
 						<li class="p-b-10">
-							<a href="#" class="stext-107 cl7 hov-cl1 trans-04">
+							<a href="product.html" class="stext-107 cl7 hov-cl1 trans-04">
 								Gorras
 							</a>
 						</li>
@@ -426,7 +426,7 @@
 						</li>
 
 						<li class="p-b-10">
-							<a href="#" class="stext-107 cl7 hov-cl1 trans-04">
+							<a href="contact.html" class="stext-107 cl7 hov-cl1 trans-04">
 								Ayuda
 							</a>
 						</li>
