--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
 		</div>
 
 		<!-- Header Mobile -->
-		<div class="wrap-header-mobile" style="background-color: #e6e6e6">
+		<div class="wrap-header-mobile">
 			<!-- Logo moblie -->		
 			<div class="logo-mobile">
 				<a href="index.html"><img src="images/icons/logo-01.png" alt="IMG-LOGO"></a>
@@ -174,7 +174,7 @@
 			<ul class="main-menu-m">
 				<li>
 					<a href="index.html">Inicio</a>
-
+				</li>
 				<li>
 					<a href="product.html">Catálogo</a>
 				</li>
