--- a/about.html
+++ b/about.html
@@ -28,6 +28,10 @@
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 <!--===============================================================================================-->
+	<style>
+    .header-v4 {
+        display: block !important;
+    }
 </head>
 <body class="animsition">
 	
